--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,11 @@ fsspec==2025.5.1
 greenlet==3.2.3
 h11==0.16.0
 hf-xet==1.1.5
+httpcore==1.0.9
+httpx==0.28.1
 huggingface-hub==0.33.1
 idna==3.10
+iniconfig==2.1.0
 Jinja2==3.1.6
 jmespath==1.0.1
 joblib==1.5.1
@@ -50,12 +53,15 @@ packaging==25.0
 pandas==2.3.0
 passlib==1.7.4
 pillow==11.2.1
+pluggy==1.6.0
 propcache==0.3.2
 pyarrow==20.0.0
 pyasn1==0.6.1
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
+Pygments==2.19.2
+pytest==8.4.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.5.0
@@ -68,7 +74,7 @@ rsa==4.9.1
 s3fs==0.4.2
 s3transfer==0.13.0
 safetensors==0.5.3
-scikit-learn==1.7.0
+scikit-learn==1.6.1
 scipy==1.15.3
 sentence-transformers==4.1.0
 six==1.17.0
@@ -79,6 +85,7 @@ starlette==0.46.2
 sympy==1.14.0
 threadpoolctl==3.6.0
 tokenizers==0.21.2
+tomli==2.2.1
 torch==2.7.1
 tqdm==4.67.1
 transformers==4.53.0
